clusters/production/apps/microservices-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-demo
  labels:
    name: microservices-demo
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted

---
